# rubiks-cube-ursina-3d

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yaml
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
frontend/scripts/: headless_check.mjs
frontend/src/: config.ts  main.ts  style.css
frontend/src/debug/: verify.ts
frontend/src/engine/: cube_controller.ts  move_definitions.ts  move_engine.ts  move_intent.ts  rotation_system.ts
frontend/src/input/: adjacency_map.ts  camera_face_resolver.ts  camera_tracker.ts  face_mappings.ts  input_controller.ts
frontend/src/model/: cube_model.ts
frontend/src/renderer/: camera.ts  cube_shell.ts  cubie.ts  debug.ts  lighting.ts  scene.ts
frontend/src/types/: three-examples.d.ts
frontend/tests/: cube_model.spec.ts  move_engine.spec.ts
scripts/: debug_moves.py  log_server.js
src/rubiks_cube/: __init__.py  cube_controller.py  cube_model.py  input_handler.py  main.py  main2.py
src/rubiks_cube/app/: __init__.py  main.py
src/rubiks_cube/engine/: move_definitions.py  move_engine.py
src/rubiks_cube/input/: __init__.py  camera_mapping.py  input_controller.py  move_actions.py
src/rubiks_cube/model/: cube_model.py
src/rubiks_cube/renderer/: ursina_renderer.py
tests/: test_camera_mapping.py  test_input_integration.py  test_main.py  test_move_actions.py  test_move_engine.py
