[project]
name = "rubiks-cube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Dyke", email = "hello@ericdyke.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ursina>=8.3.0",
]

[project.scripts]
rubiks-cube = "rubiks_cube.app.main:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]